# qt-pdf-viewer

./: LICENSE  README.md  design.py  design.ui  main.py  pyproject.toml  requirements.txt  requirements2.txt  test_!!!!
package/opt/nvi_test/: nvi_test
package/usr/share/applications/: nvi_test.desktop
src/: main.py  windows.py
src/design/: __init__.py  design.py
