[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src"]

[project]
name = "pdf_viewer"
version = "1.0.1"
description = "Desktop application for view PDF files."
requires-python = ">=3.13"
dependencies = [
    "PyQt5>=5.15",
    "pdf2image>=1.17",
]

[project.optional-dependencies]
dev = [
    "PySide6>=6.9.1",
    "ruff>=0.12",
    "pre_commit>=4.2",
    "pipdeptree>=2.28",
]

[tool.ruff]
select = ["I", "E", "F", "ANN", "Q"]
exclude = ["venv", ".venv", "__pycache__", "design"]

[tool.ruff.lint.pycodestyle]
max-line-length = 79

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
